WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
11278
REGRESSION: Popup width doesn't change to accommodate dynamic changes to options
https://bugs.webkit.org/show_bug.cgi?id=11278
Summary
REGRESSION: Popup width doesn't change to accommodate dynamic changes to options
mitz
Reported
2006-10-13 04:12:23 PDT
If you dynamically add or remove options from a pop-up or change options' length, it should resize to fit the longest option (assuming width: auto). In TOT, the resizing only happens when you subsequently change the selection in the popup. See the attached test case.
Attachments
Test case
(471 bytes, text/html)
2006-10-13 04:12 PDT
,
mitz
no flags
Details
Test case
(471 bytes, text/html)
2006-10-13 04:12 PDT
,
mitz
no flags
Details
patch
(24.87 KB, patch)
2007-01-17 12:11 PST
,
Adele Peterson
andersca
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2006-10-13 04:12:45 PDT
Created
attachment 11063
[details]
Test case
mitz
Comment 2
2006-10-13 04:12:47 PDT
Created
attachment 11064
[details]
Test case
mitz
Comment 3
2006-10-13 04:16:28 PDT
r17026
fixed a similar issue with list boxes.
Stephanie Lewis
Comment 4
2006-11-08 14:58:26 PST
radar 4826875
Adele Peterson
Comment 5
2007-01-17 12:11:42 PST
Created
attachment 12521
[details]
patch
Anders Carlsson
Comment 6
2007-01-17 13:15:25 PST
Comment on
attachment 12521
[details]
patch r=me
John Sullivan
Comment 7
2007-01-17 13:16:14 PST
Comment on
attachment 12521
[details]
patch r=me
Adele Peterson
Comment 8
2007-01-17 13:20:41 PST
Committed in
r18913
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug