LayoutTests:

Reviewed by Anders and John.

        Test for http://bugs.webkit.org/show_bug.cgi?id=11278
        <rdar://problem/4826875> REGRESSION: Popup width doesn't change to accommodate dynamic changes to options

        * fast/forms/menulist-width-change-expected.checksum: Added.
        * fast/forms/menulist-width-change-expected.png: Added.
        * fast/forms/menulist-width-change-expected.txt: Added.
        * fast/forms/menulist-width-change.html: Added.

WebCore:

        Reviewed by Anders and John.

        Fix for http://bugs.webkit.org/show_bug.cgi?id=11278
        <rdar://problem/4826875> REGRESSION: Popup width doesn't change to accommodate dynamic changes to options

        Test: fast/forms/menulist-width-change.html

        * rendering/RenderMenuList.cpp: (WebCore::RenderMenuList::updateFromElement):
          When the options change, call setNeedsLayoutAndMinMaxRecalc.



git-svn-id: svn://svn.chromium.org/blink/trunk@18913 bbb929c8-8fbe-4397-9dbb-9b2b20218538