third_party/WebKit/WebCore/rendering/RenderMenuList.cpp
@@ -121,6 +121,7 @@ void RenderMenuList::updateFromElement()
         }
         m_optionsWidth = static_cast<int>(ceilf(width));
         m_optionsChanged = false;
+        setNeedsLayoutAndMinMaxRecalc();
     }
 
     setTextFromOption(select->selectedIndex());
